--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 
   <title>Azienda Agricola Moretti</title>
   <meta name="description" content="Hub contatti - Azienda Agricola Moretti" />
-  <link rel="canonical" href="https://TUO-OWNER.github.io/azienda-agricola-moretti/" />
+
+  <!-- ✅ TODO: sostituisci OWNER con il tuo username GitHub o l'URL reale -->
+  <link rel="canonical" href="https://OWNER.github.io/azienda-agricola-moretti/" />
 
   <!-- Social preview -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
   <meta property="og:title" content="Azienda Agricola Moretti" />
   <meta property="og:description" content="Contatti, indicazioni, social e shop ufficiale" />
-  <meta property="og:url" content="https://TUO-OWNER.github.io/azienda-agricola-moretti/" />
-  <meta property="og:image" content="https://TUO-OWNER.github.io/azienda-agricola-moretti/og.jpg" />
+  <meta property="og:url" content="https://OWNER.github.io/azienda-agricola-moretti/" />
+  <meta property="og:image" content="https://OWNER.github.io/azienda-agricola-moretti/og.jpg" />
 
   <meta name="theme-color" content="#2C1C14" />
 
@@ -25,21 +27,22 @@
 
   <style>
     :root{
-      /* Agricolo premium */
+      /* Brand */
       --brand:#2C1C14;     /* marrone profondo */
       --brand2:#463326;    /* marrone caldo */
-      --cream:#F3EDE8;     /* crema */
       --olive:#6F7C4B;     /* oliva soft */
       --warm:#4E4A45;      /* grigio caldo */
 
-      --bg:#F7F5F3;
+      /* ✅ Premium clean */
+      --bg:#FFFFFF;
+      --cream:#FBF8F5;
       --card:#FFFFFF;
       --text:#0B1220;
-      --muted:#6A6A6A;
-      --line:#E7E1DB;
+      --muted: rgba(78,74,69,.82);
+      --line:#EEE7E0;
 
-      --shadow: 0 18px 45px rgba(11,18,32,.10);
-      --shadow2: 0 14px 28px rgba(11,18,32,.10);
+      --shadow: 0 14px 34px rgba(11,18,32,.08);
+      --shadow2: 0 10px 22px rgba(11,18,32,.08);
       --radius:24px;
 
       --focus: rgba(44,28,20,.18);
@@ -52,8 +55,7 @@
       font-family:"Montserrat", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
       color:var(--text);
       background:
-        radial-gradient(900px 260px at 50% -140px, rgba(44,28,20,.12), transparent 65%),
-        radial-gradient(900px 260px at 50% 40px, rgba(111,124,75,.10), transparent 65%),
+        linear-gradient(180deg, rgba(44,28,20,.04), transparent 220px),
         var(--bg);
       padding:22px 14px calc(108px + env(safe-area-inset-bottom));
     }
@@ -84,10 +86,10 @@
       transform: translateZ(0);
     }
 
-    /* HERO agricolo premium */
+    /* HERO premium + hub */
     .hero{
       position:relative;
-      padding:20px 18px 18px;
+      padding:22px 18px 18px;
       text-align:center;
       background: var(--cream);
       overflow:hidden;
@@ -96,11 +98,10 @@
       content:"";
       position:absolute;
       inset:0;
-      /* Se non hai hero-bg.jpg, puoi cancellare questa riga url(...) */
       background:
-        linear-gradient(rgba(243,237,232,.92), rgba(243,237,232,.92)),
+        linear-gradient(rgba(251,248,245,.92), rgba(251,248,245,.92)),
         url("./hero-bg.jpg") center / cover no-repeat;
-      filter: grayscale(8%) contrast(.95) brightness(1.05);
+      filter: grayscale(6%) contrast(.98) brightness(1.03);
       z-index:0;
     }
     .hero > *{position:relative; z-index:1;}
@@ -131,12 +132,31 @@
     .sub{
       margin:14px auto 0;
       max-width:580px;
-      color: var(--warm);
+      color: var(--muted);
       font-size:14px;
       line-height:1.6;
-      font-weight:400;
+      font-weight:500;
     }
-    .sub strong{font-weight:700;color:var(--brand);}
+    .sub strong{font-weight:800;color:var(--brand);}
+
+    /* ✅ Trust chips (conversion booster) */
+    .trust{
+      margin:14px auto 0;
+      display:flex;
+      gap:10px;
+      justify-content:center;
+      flex-wrap:wrap;
+      font-size:12px;
+      color: rgba(78,74,69,.86);
+      font-weight:700;
+    }
+    .trust span{
+      padding:8px 10px;
+      border:1px solid rgba(44,28,20,.10);
+      border-radius:999px;
+      background: rgba(255,255,255,.75);
+      backdrop-filter: blur(8px);
+    }
 
     /* Video */
     .video{
@@ -144,7 +164,7 @@
       max-width: 600px;
       border-radius:18px;
       overflow:hidden;
-      box-shadow: 0 18px 40px rgba(0,0,0,.12);
+      box-shadow: 0 14px 30px rgba(0,0,0,.10);
       border:1px solid rgba(44,28,20,.10);
       background:#000;
     }
@@ -157,7 +177,7 @@
       .video iframe{height: 280px;}
     }
 
-    /* Azioni top: SOLO CHIAMA */
+    /* ✅ Azioni top: WhatsApp + Chiama */
     .actions{
       padding:14px 18px 18px;
       display:grid;
@@ -165,6 +185,9 @@
       gap:10px;
       border-top:1px solid var(--line);
       background:#fff;
+    }
+    @media (min-width:560px){
+      .actions{ grid-template-columns: 1fr 1fr; }
     }
 
     .btn{
@@ -194,7 +217,7 @@
       background:var(--brand);
       color:#fff;
       border-color:transparent;
-      box-shadow:0 18px 34px rgba(44,28,20,.22);
+      box-shadow:0 14px 26px rgba(44,28,20,.18);
     }
 
     .section{
@@ -211,13 +234,16 @@
       letter-spacing:.14em;
       text-transform:uppercase;
       color:rgba(78,74,69,.85);
-      font-weight:700;
+      font-weight:800;
     }
 
     .grid{
       display:grid;
       grid-template-columns:1fr;
       gap:10px;
+    }
+    @media (min-width:560px){
+      .grid{grid-template-columns:1fr 1fr}
     }
 
     .tile{
@@ -240,8 +266,8 @@
       border-color: rgba(44,28,20,.18);
     }
 
-    .tile b{display:block; font-weight:800; color:var(--brand);}
-    .small{color:rgba(78,74,69,.85);font-size:13px;margin-top:4px;line-height:1.4;font-weight:400}
+    .tile b{display:block; font-weight:900; color:var(--brand);}
+    .small{color:rgba(78,74,69,.85);font-size:13px;margin-top:4px;line-height:1.45;font-weight:500}
     .tile a{color:inherit;text-decoration:none}
     .tile a:hover{text-decoration:underline}
 
@@ -263,16 +289,21 @@
       width:20px;height:20px;
       flex:0 0 auto;
       display:block;
-      color: var(--brand);
+      color: currentColor;
     }
-    .sbtn.primary .wa-fill{ color:#fff; }
 
-    /* Social */
+    /* Social: ✅ icone + label (più chiaro e premium) */
     .social-row{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
       gap:12px;
       width:100%;
+    }
+    .socwrap{
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:6px;
     }
     .soc{
       width:100%;
@@ -283,7 +314,7 @@
       align-items:center;
       justify-content:center;
       text-decoration:none;
-      box-shadow:0 10px 22px rgba(0,0,0,.12);
+      box-shadow:0 10px 22px rgba(0,0,0,.10);
       border:1px solid rgba(0,0,0,.08);
     }
     .soc svg{ width:22px; height:22px; display:block; }
@@ -296,13 +327,19 @@
       stroke-linejoin:round;
     }
     .soc svg.ig *{ fill:none !important; }
+    .soclbl{
+      font-size:12px;
+      font-weight:800;
+      color:rgba(78,74,69,.78);
+      letter-spacing:.01em;
+    }
 
-    /* Sticky: solo Chiama / WhatsApp / Sito */
+    /* Sticky: ✅ WhatsApp primary */
     .sticky{
       position:fixed;
       left:0; right:0; bottom:0;
       padding:10px 12px calc(12px + env(safe-area-inset-bottom));
-      background:rgba(243,237,232,.82);
+      background:rgba(251,248,245,.86);
       backdrop-filter: blur(12px);
       border-top:1px solid rgba(231,225,219,.95);
       z-index:999;
@@ -324,7 +361,7 @@
       border:1px solid rgba(44,28,20,.10);
       background:#fff;
       color:var(--text);
-      font-weight:800;
+      font-weight:900;
       text-decoration:none;
       box-shadow:0 10px 20px rgba(11,18,32,.08);
       min-width:0;
@@ -337,14 +374,11 @@
       background:var(--brand);
       color:#fff;
       border-color:transparent;
-      box-shadow:0 14px 26px rgba(44,28,20,.18);
+      box-shadow:0 14px 26px rgba(44,28,20,.16);
     }
     .sbtn:focus{outline:3px solid var(--focus); outline-offset:2px}
     .lbl{min-width:0; overflow:hidden; text-overflow:ellipsis}
 
-    @media (min-width:560px){
-      .grid{grid-template-columns:1fr 1fr}
-    }
     @media (max-width:360px){
       .lbl{display:none}
       .sbtn{gap:0}
@@ -356,7 +390,7 @@
   <div class="wrap">
     <div class="card">
 
-      <!-- ✅ LOGO: il tuo file si chiama "logo moretti.jpg" -> in HTML va con %20 -->
+      <!-- ✅ LOGO -->
       <div class="logo-wrap">
         <img class="logo" src="./logo%20moretti.jpg" alt="Azienda Agricola Moretti" loading="eager" decoding="async">
       </div>
@@ -371,9 +405,17 @@
           Vendita <strong>al dettaglio</strong> e <strong>all’ingrosso</strong> · Marino &amp; Store Eataly Roma
         </div>
 
-        <!-- ✅ Video YouTube (URL pulito) -->
+        <!-- ✅ Trust chips -->
+        <div class="trust" aria-label="Punti di forza">
+          <span>✓ Produzione locale</span>
+          <span>✓ Forniture B2B</span>
+          <span>✓ Marino + Eataly Roma</span>
+        </div>
+
+        <!-- ✅ Video (lazy) -->
         <div class="video" aria-label="Video di presentazione">
           <iframe
+            loading="lazy"
             src="https://www.youtube.com/embed/bsgln3b1mOc"
             title="Azienda Agricola Moretti"
             frameborder="0"
@@ -383,17 +425,29 @@
         </div>
       </div>
 
-      <!-- ✅ SOLO CHIAMA (top) -->
+      <!-- ✅ TOP CTA: WhatsApp + Chiama -->
+      <!-- TODO: sostituisci WHATSAPP_NUMBER con il numero reale (solo numeri: 39...) -->
       <div class="actions">
-        <a class="btn primary" href="tel:+390688936064" aria-label="Chiama Azienda Agricola Moretti">
+        <a class="btn primary"
+           href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20info%20su%20prodotti%20e%20disponibilit%C3%A0"
+           aria-label="Scrivi su WhatsApp">
+          <svg class="wa-fill" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor" d="M12.04 2C6.57 2 2.13 6.44 2.13 11.91c0 1.73.45 3.42 1.3 4.9L2 22l5.33-1.4a9.86 9.86 0 0 0 4.71 1.2h.01c5.47 0 9.9-4.44 9.9-9.9C21.95 6.44 17.51 2 12.04 2zm5.76 14.3c-.24.68-1.4 1.3-1.92 1.38-.48.07-1.1.1-1.78-.11-.41-.13-.93-.3-1.6-.6-2.82-1.22-4.66-4.1-4.8-4.29-.13-.19-1.14-1.52-1.14-2.9 0-1.38.72-2.05.98-2.33.25-.28.56-.35.74-.35h.54c.17 0 .4-.03.62.47.24.58.81 2 .88 2.14.07.15.11.32.02.51-.08.19-.13.32-.26.49-.13.17-.27.38-.39.5-.13.13-.26.27-.11.52.15.25.68 1.12 1.46 1.81 1 .88 1.84 1.15 2.1 1.28.26.13.41.11.56-.06.15-.17.64-.74.81-1 .17-.26.34-.21.57-.13.24.08 1.5.71 1.75.84.26.13.43.19.49.3.06.11.06.64-.18 1.32z"/>
+          </svg>
+          Scrivi su WhatsApp
+        </a>
+
+        <a class="btn"
+           href="tel:+390688936064"
+           aria-label="Chiama Azienda Agricola Moretti">
           <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.8 19.8 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.8 12.8 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.8 12.8 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
           </svg>
-          Contattaci ora
+          Chiama ora
         </a>
       </div>
 
-      <!-- ✅ Produzioni (premium + B2B) -->
+      <!-- ✅ Produzioni -->
       <div class="section alt">
         <h2>Le nostre produzioni</h2>
         <div class="grid">
@@ -433,6 +487,7 @@
             </div>
           </div>
 
+          <!-- ✅ B2B con CTA dedicata -->
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M3 7h18"/>
@@ -441,14 +496,20 @@
             </svg>
             <div>
               <b>Dettaglio &amp; Ingrosso (B2B)</b>
-              <div class="small">Forniture per ristorazione, negozi e distributori. Richiedi disponibilità.</div>
+              <div class="small">Forniture per ristorazione, negozi e distributori.</div>
+              <div class="small">
+                <a href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20disponibilit%C3%A0%20settimanale%20e%20listino%20B2B"
+                   target="_blank" rel="noopener noreferrer">
+                  Richiedi listino B2B su WhatsApp
+                </a>
+              </div>
             </div>
           </div>
 
         </div>
       </div>
 
-      <!-- ✅ Dove ci trovi (2 punti) -->
+      <!-- ✅ Dove ci trovi -->
       <div class="section">
         <h2>Dove ci trovi</h2>
         <div class="grid">
@@ -486,7 +547,7 @@
         </div>
       </div>
 
-      <!-- ✅ Shop (Eataly + sito) -->
+      <!-- ✅ Shop -->
       <div class="section alt">
         <h2>Shop</h2>
         <div class="grid">
@@ -525,7 +586,7 @@
         </div>
       </div>
 
-      <!-- ✅ Orari (Marino) -->
+      <!-- ✅ Orari -->
       <div class="section">
         <h2>Orari (Marino)</h2>
         <div class="grid">
@@ -545,37 +606,46 @@
         </div>
       </div>
 
-      <!-- ✅ Social -->
+      <!-- ✅ Social con label -->
       <div class="section alt">
         <h2>Social</h2>
         <div class="social-row">
 
-          <a class="soc" href="https://www.facebook.com/p/Azienda-Agricola-Moretti-100054240050633/"
-             target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="Facebook">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M14.5 8.5H16V6h-1.5C12.6 6 11.5 7.2 11.5 9v2H10v2.7h1.5V21h2.8v-7.3H16l.4-2.7h-2.1V9.3c0-.5.3-.8.8-.8z"/>
-            </svg>
-          </a>
+          <div class="socwrap">
+            <a class="soc" href="https://www.facebook.com/p/Azienda-Agricola-Moretti-100054240050633/"
+               target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="Facebook">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M14.5 8.5H16V6h-1.5C12.6 6 11.5 7.2 11.5 9v2H10v2.7h1.5V21h2.8v-7.3H16l.4-2.7h-2.1V9.3c0-.5.3-.8.8-.8z"/>
+              </svg>
+            </a>
+            <div class="soclbl">Facebook</div>
+          </div>
 
-          <a class="soc ig-open"
-             href="https://www.instagram.com/azienda_agricola_moretti/"
-             rel="noopener noreferrer"
-             referrerpolicy="no-referrer"
-             aria-label="Instagram"
-             data-ig="azienda_agricola_moretti">
-            <svg class="ig" viewBox="0 0 24 24" aria-hidden="true">
-              <rect x="2" y="2" width="20" height="20" rx="5"></rect>
-              <circle cx="12" cy="12" r="4"></circle>
-              <circle cx="17.5" cy="6.5" r="1"></circle>
-            </svg>
-          </a>
+          <div class="socwrap">
+            <a class="soc ig-open"
+               href="https://www.instagram.com/azienda_agricola_moretti/"
+               rel="noopener noreferrer"
+               referrerpolicy="no-referrer"
+               aria-label="Instagram"
+               data-ig="azienda_agricola_moretti">
+              <svg class="ig" viewBox="0 0 24 24" aria-hidden="true">
+                <rect x="2" y="2" width="20" height="20" rx="5"></rect>
+                <circle cx="12" cy="12" r="4"></circle>
+                <circle cx="17.5" cy="6.5" r="1"></circle>
+              </svg>
+            </a>
+            <div class="soclbl">Instagram</div>
+          </div>
 
-          <a class="soc" href="https://www.tiktok.com/@aziendamoretti"
-             target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="TikTok">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M16.5 3c1.2 1.7 2.9 2.9 4.9 3v3.1c-1.9-.1-3.7-.8-5.2-1.9v6.2a6 6 0 1 1-6-6c.4 0 .8 0 1.2.1v3.3a2.7 2.7 0 1 0 1.9 2.6V3h3.2z"/>
-            </svg>
-          </a>
+          <div class="socwrap">
+            <a class="soc" href="https://www.tiktok.com/@aziendamoretti"
+               target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="TikTok">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M16.5 3c1.2 1.7 2.9 2.9 4.9 3v3.1c-1.9-.1-3.7-.8-5.2-1.9v6.2a6 6 0 1 1-6-6c.4 0 .8 0 1.2.1v3.3a2.7 2.7 0 1 0 1.9 2.6V3h3.2z"/>
+              </svg>
+            </a>
+            <div class="soclbl">TikTok</div>
+          </div>
 
         </div>
       </div>
@@ -583,23 +653,24 @@
     </div>
   </div>
 
-  <!-- ✅ Sticky bar: solo Chiama / WhatsApp / Sito -->
+  <!-- ✅ Sticky bar: WhatsApp primary -->
   <div class="sticky" aria-label="Azioni rapide">
     <div class="inner">
 
-      <a class="sbtn primary" href="tel:+390688936064" aria-label="Chiama">
-        <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.8 19.8 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.8 12.8 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.8 12.8 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-        </svg>
-        <span class="lbl">Chiama</span>
-      </a>
-
-      <!-- ⚠️ Sostituisci 39XXXXXXXXXX col numero reale (senza + e senza spazi) -->
-      <a class="sbtn" href="https://wa.me/39XXXXXXXXXX" aria-label="WhatsApp">
+      <a class="sbtn primary"
+         href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20info%20su%20prodotti%20e%20disponibilit%C3%A0"
+         aria-label="WhatsApp">
         <svg class="wa-fill" viewBox="0 0 24 24" aria-hidden="true">
           <path fill="currentColor" d="M12.04 2C6.57 2 2.13 6.44 2.13 11.91c0 1.73.45 3.42 1.3 4.9L2 22l5.33-1.4a9.86 9.86 0 0 0 4.71 1.2h.01c5.47 0 9.9-4.44 9.9-9.9C21.95 6.44 17.51 2 12.04 2zm5.76 14.3c-.24.68-1.4 1.3-1.92 1.38-.48.07-1.1.1-1.78-.11-.41-.13-.93-.3-1.6-.6-2.82-1.22-4.66-4.1-4.8-4.29-.13-.19-1.14-1.52-1.14-2.9 0-1.38.72-2.05.98-2.33.25-.28.56-.35.74-.35h.54c.17 0 .4-.03.62.47.24.58.81 2 .88 2.14.07.15.11.32.02.51-.08.19-.13.32-.26.49-.13.17-.27.38-.39.5-.13.13-.26.27-.11.52.15.25.68 1.12 1.46 1.81 1 .88 1.84 1.15 2.1 1.28.26.13.41.11.56-.06.15-.17.64-.74.81-1 .17-.26.34-.21.57-.13.24.08 1.5.71 1.75.84.26.13.43.19.49.3.06.11.06.64-.18 1.32z"/>
         </svg>
         <span class="lbl">WhatsApp</span>
+      </a>
+
+      <a class="sbtn" href="tel:+390688936064" aria-label="Chiama">
+        <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.8 19.8 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.8 12.8 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.8 12.8 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+        </svg>
+        <span class="lbl">Chiama</span>
       </a>
 
       <a class="sbtn" href="https://aziendamoretti.com/" target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="Sito">
