--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   <style>
     :root{
       /* Brand */
-      --brand:#2C1C14;     /* marrone profondo */
-      --brand2:#463326;    /* marrone caldo */
-      --olive:#6F7C4B;     /* oliva soft */
-      --warm:#4E4A45;      /* grigio caldo */
+      --brand:#2C1C14;
+      --brand2:#463326;
+      --olive:#6F7C4B;
+      --warm:#4E4A45;
 
-      /* ✅ Premium clean */
+      /* Premium clean */
       --bg:#FFFFFF;
       --cream:#FBF8F5;
       --card:#FFFFFF;
@@ -69,7 +69,7 @@
       overflow:hidden;
     }
 
-    /* ✅ LOGO sempre visibile */
+    /* LOGO */
     .logo-wrap{
       display:flex;
       justify-content:center;
@@ -86,10 +86,10 @@
       transform: translateZ(0);
     }
 
-    /* HERO premium + hub */
+    /* HERO */
     .hero{
       position:relative;
-      padding:22px 18px 18px;
+      padding:22px 18px 16px;
       text-align:center;
       background: var(--cream);
       overflow:hidden;
@@ -124,31 +124,46 @@
     .divider{
       width:72px;
       height:2px;
-      margin:14px auto 0;
+      margin:12px auto 0;
       background: rgba(111,124,75,.55);
       border-radius:999px;
     }
 
+    /* ✅ microcopy QR universale */
+    .qrhint{
+      margin:12px auto 0;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 12px;
+      border-radius:999px;
+      border:1px solid rgba(44,28,20,.10);
+      background: rgba(255,255,255,.72);
+      color: rgba(78,74,69,.90);
+      font-size:12px;
+      font-weight:800;
+    }
+
     .sub{
-      margin:14px auto 0;
+      margin:12px auto 0;
       max-width:580px;
       color: var(--muted);
       font-size:14px;
-      line-height:1.6;
+      line-height:1.55;
       font-weight:500;
     }
     .sub strong{font-weight:800;color:var(--brand);}
 
-    /* ✅ Trust chips (conversion booster) */
+    /* Trust chips */
     .trust{
-      margin:14px auto 0;
+      margin:12px auto 0;
       display:flex;
       gap:10px;
       justify-content:center;
       flex-wrap:wrap;
       font-size:12px;
       color: rgba(78,74,69,.86);
-      font-weight:700;
+      font-weight:800;
     }
     .trust span{
       padding:8px 10px;
@@ -160,7 +175,7 @@
 
     /* Video */
     .video{
-      margin:18px auto 0;
+      margin:14px auto 0;
       max-width: 600px;
       border-radius:18px;
       overflow:hidden;
@@ -177,7 +192,7 @@
       .video iframe{height: 280px;}
     }
 
-    /* ✅ Azioni top: WhatsApp + Chiama */
+    /* ✅ Azioni top: WhatsApp + Chiama + Naviga */
     .actions{
       padding:14px 18px 18px;
       display:grid;
@@ -188,6 +203,7 @@
     }
     @media (min-width:560px){
       .actions{ grid-template-columns: 1fr 1fr; }
+      .actions .btn.full{ grid-column: 1 / -1; }
     }
 
     .btn{
@@ -198,7 +214,7 @@
       text-decoration:none;
       border-radius:18px;
       padding:16px 14px;
-      font-weight:800;
+      font-weight:900;
       border:1px solid rgba(44,28,20,.10);
       background:#fff;
       color:var(--text);
@@ -234,7 +250,7 @@
       letter-spacing:.14em;
       text-transform:uppercase;
       color:rgba(78,74,69,.85);
-      font-weight:800;
+      font-weight:900;
     }
 
     .grid{
@@ -284,7 +300,6 @@
     }
     .btn.primary .i, .sbtn.primary .i{ stroke:#fff; }
 
-    /* WhatsApp icon filled */
     .wa-fill{
       width:20px;height:20px;
       flex:0 0 auto;
@@ -292,7 +307,23 @@
       color: currentColor;
     }
 
-    /* Social: ✅ icone + label (più chiaro e premium) */
+    /* ✅ mini bottone dentro tile (per B2B) */
+    .mini-cta{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      margin-top:10px;
+      padding:10px 12px;
+      border-radius:14px;
+      border:1px solid rgba(44,28,20,.12);
+      background: rgba(255,255,255,.9);
+      font-weight:900;
+      text-decoration:none;
+    }
+    .mini-cta:hover{box-shadow:var(--shadow2); text-decoration:none}
+    .mini-cta .i{margin-top:0}
+
+    /* Social */
     .social-row{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -329,12 +360,12 @@
     .soc svg.ig *{ fill:none !important; }
     .soclbl{
       font-size:12px;
-      font-weight:800;
+      font-weight:900;
       color:rgba(78,74,69,.78);
       letter-spacing:.01em;
     }
 
-    /* Sticky: ✅ WhatsApp primary */
+    /* Sticky: WhatsApp primary + Chiama + Naviga */
     .sticky{
       position:fixed;
       left:0; right:0; bottom:0;
@@ -390,7 +421,6 @@
   <div class="wrap">
     <div class="card">
 
-      <!-- ✅ LOGO -->
       <div class="logo-wrap">
         <img class="logo" src="./logo%20moretti.jpg" alt="Azienda Agricola Moretti" loading="eager" decoding="async">
       </div>
@@ -400,36 +430,25 @@
         <div class="tagline">Dal cuore dei Castelli Romani</div>
         <div class="divider"></div>
 
+        <!-- ✅ QR universal hint -->
+        <div class="qrhint">📲 Scansiona per contatti, ordini e indicazioni</div>
+
         <div class="sub">
           <strong>Produzione di funghi a km 0</strong> · Linea <strong>fresco</strong>, <strong>gelo</strong> e <strong>trasformati</strong><br>
           Vendita <strong>al dettaglio</strong> e <strong>all’ingrosso</strong> · Marino &amp; Store Eataly Roma
         </div>
 
-        <!-- ✅ Trust chips -->
         <div class="trust" aria-label="Punti di forza">
           <span>✓ Produzione locale</span>
           <span>✓ Forniture B2B</span>
           <span>✓ Marino + Eataly Roma</span>
         </div>
-
-        <!-- ✅ Video (lazy) -->
-        <div class="video" aria-label="Video di presentazione">
-          <iframe
-            loading="lazy"
-            src="https://www.youtube.com/embed/bsgln3b1mOc"
-            title="Azienda Agricola Moretti"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-          </iframe>
-        </div>
       </div>
 
-      <!-- ✅ TOP CTA: WhatsApp + Chiama -->
-      <!-- TODO: sostituisci WHATSAPP_NUMBER con il numero reale (solo numeri: 39...) -->
+      <!-- ✅ TOP CTA: WhatsApp + Chiama + Naviga (prima di tutto) -->
       <div class="actions">
         <a class="btn primary"
-           href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20info%20su%20prodotti%20e%20disponibilit%C3%A0"
+           href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20ho%20scansionato%20il%20vostro%20QR%20code%20e%20vorrei%20informazioni%20su%20prodotti%20e%20disponibilit%C3%A0."
            aria-label="Scrivi su WhatsApp">
           <svg class="wa-fill" viewBox="0 0 24 24" aria-hidden="true">
             <path fill="currentColor" d="M12.04 2C6.57 2 2.13 6.44 2.13 11.91c0 1.73.45 3.42 1.3 4.9L2 22l5.33-1.4a9.86 9.86 0 0 0 4.71 1.2h.01c5.47 0 9.9-4.44 9.9-9.9C21.95 6.44 17.51 2 12.04 2zm5.76 14.3c-.24.68-1.4 1.3-1.92 1.38-.48.07-1.1.1-1.78-.11-.41-.13-.93-.3-1.6-.6-2.82-1.22-4.66-4.1-4.8-4.29-.13-.19-1.14-1.52-1.14-2.9 0-1.38.72-2.05.98-2.33.25-.28.56-.35.74-.35h.54c.17 0 .4-.03.62.47.24.58.81 2 .88 2.14.07.15.11.32.02.51-.08.19-.13.32-.26.49-.13.17-.27.38-.39.5-.13.13-.26.27-.11.52.15.25.68 1.12 1.46 1.81 1 .88 1.84 1.15 2.1 1.28.26.13.41.11.56-.06.15-.17.64-.74.81-1 .17-.26.34-.21.57-.13.24.08 1.5.71 1.75.84.26.13.43.19.49.3.06.11.06.64-.18 1.32z"/>
@@ -444,6 +463,18 @@
             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.8 19.8 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.8 12.8 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.8 12.8 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
           </svg>
           Chiama ora
+        </a>
+
+        <!-- ✅ Navigazione (full width su desktop) -->
+        <a class="btn full"
+           href="https://www.google.com/maps/dir/?api=1&destination=Via+Paolo+Mercuri+23+00047+Marino+RM"
+           target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
+           aria-label="Avvia navigazione verso Azienda Agricola Moretti (Marino)">
+          <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M21 10l-9 11-9-11a9 9 0 1 1 18 0z"/>
+            <path d="M12 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
+          </svg>
+          Avvia navigazione (Marino)
         </a>
       </div>
 
@@ -487,7 +518,7 @@
             </div>
           </div>
 
-          <!-- ✅ B2B con CTA dedicata -->
+          <!-- ✅ B2B con CTA più forte -->
           <div class="tile">
             <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M3 7h18"/>
@@ -497,15 +528,36 @@
             <div>
               <b>Dettaglio &amp; Ingrosso (B2B)</b>
               <div class="small">Forniture per ristorazione, negozi e distributori.</div>
-              <div class="small">
-                <a href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20disponibilit%C3%A0%20settimanale%20e%20listino%20B2B"
-                   target="_blank" rel="noopener noreferrer">
-                  Richiedi listino B2B su WhatsApp
-                </a>
-              </div>
+
+              <a class="mini-cta"
+                 href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20disponibilit%C3%A0%20settimanale%20e%20listino%20B2B."
+                 target="_blank" rel="noopener noreferrer"
+                 aria-label="Richiedi listino B2B su WhatsApp">
+                <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                  <path d="M17 3h4v4"/>
+                  <path d="M10 14L21 3"/>
+                </svg>
+                Richiedi listino B2B
+              </a>
             </div>
           </div>
 
+        </div>
+      </div>
+
+      <!-- ✅ VIDEO SPOSTATO QUI (approfondimento, non blocco conversione) -->
+      <div class="section">
+        <h2>Video</h2>
+        <div class="video" aria-label="Video di presentazione">
+          <iframe
+            loading="lazy"
+            src="https://www.youtube.com/embed/bsgln3b1mOc"
+            title="Azienda Agricola Moretti"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+          </iframe>
         </div>
       </div>
 
@@ -606,7 +658,7 @@
         </div>
       </div>
 
-      <!-- ✅ Social con label -->
+      <!-- ✅ Social -->
       <div class="section alt">
         <h2>Social</h2>
         <div class="social-row">
@@ -653,12 +705,12 @@
     </div>
   </div>
 
-  <!-- ✅ Sticky bar: WhatsApp primary -->
+  <!-- ✅ Sticky bar -->
   <div class="sticky" aria-label="Azioni rapide">
     <div class="inner">
 
       <a class="sbtn primary"
-         href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20vorrei%20info%20su%20prodotti%20e%20disponibilit%C3%A0"
+         href="https://wa.me/WHATSAPP_NUMBER?text=Salve%2C%20ho%20scansionato%20il%20vostro%20QR%20code%20e%20vorrei%20informazioni."
          aria-label="WhatsApp">
         <svg class="wa-fill" viewBox="0 0 24 24" aria-hidden="true">
           <path fill="currentColor" d="M12.04 2C6.57 2 2.13 6.44 2.13 11.91c0 1.73.45 3.42 1.3 4.9L2 22l5.33-1.4a9.86 9.86 0 0 0 4.71 1.2h.01c5.47 0 9.9-4.44 9.9-9.9C21.95 6.44 17.51 2 12.04 2zm5.76 14.3c-.24.68-1.4 1.3-1.92 1.38-.48.07-1.1.1-1.78-.11-.41-.13-.93-.3-1.6-.6-2.82-1.22-4.66-4.1-4.8-4.29-.13-.19-1.14-1.52-1.14-2.9 0-1.38.72-2.05.98-2.33.25-.28.56-.35.74-.35h.54c.17 0 .4-.03.62.47.24.58.81 2 .88 2.14.07.15.11.32.02.51-.08.19-.13.32-.26.49-.13.17-.27.38-.39.5-.13.13-.26.27-.11.52.15.25.68 1.12 1.46 1.81 1 .88 1.84 1.15 2.1 1.28.26.13.41.11.56-.06.15-.17.64-.74.81-1 .17-.26.34-.21.57-.13.24.08 1.5.71 1.75.84.26.13.43.19.49.3.06.11.06.64-.18 1.32z"/>
@@ -673,19 +725,21 @@
         <span class="lbl">Chiama</span>
       </a>
 
-      <a class="sbtn" href="https://aziendamoretti.com/" target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer" aria-label="Sito">
+      <a class="sbtn"
+         href="https://www.google.com/maps/dir/?api=1&destination=Via+Paolo+Mercuri+23+00047+Marino+RM"
+         target="_blank" rel="noopener noreferrer" referrerpolicy="no-referrer"
+         aria-label="Navigazione">
         <svg class="i" viewBox="0 0 24 24" aria-hidden="true">
-          <circle cx="12" cy="12" r="10"/>
-          <line x1="2" y1="12" x2="22" y2="12"/>
-          <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+          <path d="M21 10l-9 11-9-11a9 9 0 1 1 18 0z"/>
+          <path d="M12 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
         </svg>
-        <span class="lbl">Sito</span>
+        <span class="lbl">Naviga</span>
       </a>
 
     </div>
   </div>
 
-  <!-- ✅ Instagram deep-link + fallback -->
+  <!-- Instagram deep-link + fallback -->
   <script>
   (function(){
     var a = document.querySelector('.ig-open');
